--- a/pages/styles/all.css
+++ b/pages/styles/all.css
@@ -2,6 +2,10 @@ body {
     min-height: 100vh;
 }
 
+header {
+    position: relative;
+}
+
 main {
     flex: 1;
 }
@@ -64,6 +68,116 @@ footer {
     height: 84px;
 }
 
+.btnTop {
+    width: 50px; 
+    height: 50px; 
+    bottom: 50px; 
+    left: 50px;
+    border: 4px solid #fff;
+    opacity: 75%;
+    transition: 0.2s ease-in-out 0s;
+}
+
+.btnTop:hover {
+    opacity: 1;
+}
+
+.chatWrapper {
+    width: 350px;
+    bottom: 0;
+    right: 0;
+}
+
+.btnChat {
+    position: relative;
+    left: 0;
+    width: 50%;
+    height: 30px;
+    z-index: 99999;
+    cursor: pointer;
+    user-select: none;
+    opacity: .75;
+    transition: 0.2s ease-in-out 0s;
+    outline: none;
+    background-color: #19c13a;
+}
+
+.btnChat:hover {
+    opacity: 1;
+}
+
+#chat {
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.575)!important;
+}
+
+.chatWrapper {
+    z-index: 1000;
+}
+
+.chat {
+    width: 100%;
+    height: 400px;
+    background-color: black;
+}
+
+.chatInput {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+}
+
+.messages {
+    flex:1 1 auto;
+    padding: 10px 10px 0 10px;
+    overflow-y: auto;
+}
+
+.msg {
+    padding: 10px;
+    font-weight: 600;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.mySide {
+    align-self: flex-start;
+    margin-right: 20px;
+    background-color: #19c13a;
+    color: white
+}
+
+.counterSide {
+    align-self: flex-end;
+    margin-left: 20px;
+    background-color: #f1f0f0;
+}
+
+.btnSend {
+    background-color: #19c13a;
+    width: 40px;
+    height: 40px;
+    transition: 0.2s ease-in-out 0s;
+}
+
+.btnSend:hover {
+    background-color: #12a730;
+}
+
+.fastQsts {
+    padding: 10px;
+    margin: 0;
+}
+
+.fastQsts > li {
+    list-style-type: none;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #12a730;
+    user-select: none;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
 @media (min-width: 768px) { 
     .breadcrumb-item::before {
         --bs-breadcrumb-divider: '|';
@@ -91,10 +205,19 @@ footer {
     }
 }
 
-@media (max-width: 350px) {
-    /* body {
-        zoom: 50%;
-        min-height: 200vh;
-    } */
-    
+@media (max-width: 768px) {
+    header {
+        position: sticky;
+        top: 0px;
+        width: 100%;
+        z-index: 1000;
+    }
+
+    .btnChat,#chat{
+        float:right;
+    }
+
+    .btnTop {
+        display: none !important;
+    }
 }
