add tooltips for catalog and timer

--- a/pages/styles/main.css
+++ b/pages/styles/main.css
@@ -8,6 +8,10 @@
     object-fit: cover;
 }
 
+#timer {
+    z-index: 10000;
+}
+
 @media (min-width: 1200px) { 
     .pic {
         height: 360px !important;
